# axes

./: .gitignore  Cargo.toml  README.md  TODO.md
.axes/: axes.toml
src/: cli.rs  config.rs  constants.rs  lib.rs  models.rs
src/.axes/: axes.toml
src/core/: config.rs  config_resolver.rs  context_resolver.rs  graph_display.rs  index.rs  index_manager.rs  interpolator.rs  mod.rs  onboarding_manager.rs  paths.rs  resolver.rs  templates.rs
src/models/: mod.rs
src/system/: executor.rs  io.rs  mod.rs  shell.rs
templates/default/.axes/: .gitignore.template  axes.toml.template
