[package]
name = "axes"
version = "0.1.0"
edition = "2024"
licence = "MIT"

[dependencies]
anyhow = "1.0.99"
bincode = {version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
path-clean = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
shlex = "1.3.0"
tempfile = "3.21.0"
thiserror = "2.0.16"
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
